bug fixes with movGen + enhancements

--- a/Notes/TODO
+++ b/Notes/TODO
@@ -7,13 +7,14 @@ Large:
 
 
 Medium:
-1. Fix leaks
-2. consider teskeer l kash early in the moves.
+1. ✔ Fix leaks
+2. ✔ consider teskeer l kash early in the moves.
 2. undo
-3. improve check_for_force performance by creating a get_max_akel_length function
 4. ✔ minimax can only return eval, and at the end get the best move based on the evals of level 1
 
 Small:
-1. ✔ There is a bug in sombol logic, sometimes its playing fumb moves, fix it.
-2. give isEmptyForce to orderMoves
-3. let minimax start with an array of valid moves rather than playing everyone of them
+1. ✔ let minimax start with an array of valid moves rather than playing everyone of them
+2. 3mal concept l zewye l aweye wl zewye l d3ife, its really important for endgames
+
+Bugs:
+1. very weird behaviour: its doing some terrible moves withoug orderMoves + its playing somewhat weirdly now even with it ma 3ende fekra sho l sabab.
